# md2tex

./: .gitignore  CMakeLists.txt  README.md  ast.tc  gen_bib.cpp  gen_bib.h  gen_latex.cpp  gen_latex.h  gen_list.cpp  gen_list.h  gen_table.cpp  gen_table.h  lexer.h  lexer.l  lexer.re  main.cpp  main.h  parser.y
cmake/: FindTREECC.cmake
tests/: bibliografia.md  ciudades_coloniales.md  cover1.txt  cover2.txt  demo.md  emphasis.md  images.md  input.txt  input2.txt  list-of-tables.md  lists.md  pagenumbering.txt  tables-csv.md  tables.md  tables2.md  tables3.md
tests-dev/: CMakeLists.txt  md2tex
tests-dev/latex/: cover-default.tex  cover-report.tex  emphasis-text.tex  headers.tex  list-of-figures.tex  list-of-tables.tex  lists.tex  multiple-figures.tex  numbered-headers.tex  pagenumbering.tex  plain-text.tex  simple-figures.tex  table-of-contents.tex  tables-csv.tex  tables.tex
tests-dev/md/: cover-default.md  emphasis-text.md  list-of-figures.md  list-of-tables.md  numbered-headers.md  pagenumbering.md  plain-text.md  simple-figures.md  table-of-contents.md  tables-csv.md  tables.md
tests-dev/tests/: doctest.h  test_cases.cpp
user-tests/: chktex  emoji.h  main.cpp  main.h  md2tex  run-tests
user-tests/bibliography/: bibliography.md
user-tests/cover-report/: cover-report.md
user-tests/headers/: headers.md
user-tests/list-of-tables/latex/csv/: table1.csv
user-tests/lists/: lists.md
user-tests/multiple-figures/: multiple-figures.md
user-tests/plain-text/: plain-text.md
user-tests/tables-csv/latex/csv/: table2.csv  table3.csv
